--- a/src/harmony/Radio/Radio.module.css
+++ b/src/harmony/Radio/Radio.module.css
@@ -1,6 +1,14 @@
 .Radio {
     position: relative;
     display: inline-flex;
+    align-items: center;
+    color: var(--text-primary);
+    cursor: pointer;
+}
+
+.RadioDisabled {
+    color: var(--text-ghost);
+    cursor: not-allowed;
 }
 
 .RadioInput {
@@ -8,15 +16,17 @@
     cursor: pointer;
     background-color: transparent;
     border: 1px solid var(--check-default);
+    flex-basis: 0.875rem;
     width: 0.875rem;
     height: 0.875rem;
     border-radius: 50%;
-    transition: background-color 0.2s ease, border-color 0.2s ease;
+    transition: border-color 0.2s ease;
 
     position: relative;
 
     outline: none;
     padding: 0;
+    margin: 0.125rem; /* with this prop getting same size as Checkbox */
 
     color: var(--check-checked);
 }
@@ -50,17 +60,18 @@
     position: absolute;
     transition: opacity 0.2s ease;
     background-color: currentColor;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    width: 0;
+    height: 0;
+
+    transition: width 0.2s ease, height 0.2s ease;
 }
 
 .RadioInput:checked:after {
     opacity: 1;
     visibility: visible;
-}
-
-.RadioInput:checked:after {
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
 
     width: 0.375rem;
     height: 0.375rem;
@@ -73,4 +84,9 @@
     outline-color: var(--check-outline);
     outline-style: solid;
     outline-offset: 2px;
+}
+
+.RadioLabel {
+    color: currentColor;
+    margin-left: var(--gap-s);
 }
